Dodani setteri, getteri, konstruktor za artikal